fix: favorites list overflow + dates initial values + refetch queries

--- a/src/components/AppointmentsLayout/AppointmentsLayout-styles.less
+++ b/src/components/AppointmentsLayout/AppointmentsLayout-styles.less
@@ -15,6 +15,6 @@
 	}
 
 	.favorites-list {
-		margin-top: 32px;
+		padding-top: 32px;
 	}
 }
